# bd2wg

./: Cargo.toml  README.md  TODO.md  ansy.xml
.github/workflows/: release-build.yml
archives/: ansy.xml  shuffle.fsx
assets/: bestdoli.json  header.json
assets/redirect/: mygo.xml  redirect.xsd
crates/bd2wg/: Cargo.toml
crates/bd2wg-cli/: Cargo.toml
crates/bd2wg-cli/src/: main.rs  utils.rs
crates/bd2wg/src/: error.rs  lib.rs  models.rs  services.rs  traits.rs  utils.rs
crates/bd2wg/src/models/: bestdori.rs  redirect.rs  webgal.rs
crates/bd2wg/src/models/bestdori/: action.rs  live2d.rs  resource.rs  story.rs
crates/bd2wg/src/models/redirect/: config.rs
crates/bd2wg/src/models/webgal/: action.rs  live2d.rs  resource.rs  story.rs
crates/bd2wg/src/services/: downloader.rs  pipeline.rs  redirector.rs  resolver.rs  transpiler.rs
crates/bd2wg/src/services/downloader/: pool.rs  service.rs
crates/bd2wg/src/services/pipeline/: download.rs  transpile.rs
crates/bd2wg/src/traits/: asset.rs  download.rs  downloader.rs  handle.rs  pipeline.rs  redirect.rs  resolve.rs  resolver.rs  transpile.rs  transpiler.rs
crates/derive-webgal/: Cargo.toml
crates/template-parse/: Cargo.toml
crates/template-parse/src/: error.rs  lib.rs  parser.rs  token.rs
crates/template-parse/tests/: template_parse.rs
crates/webgal-derive/: Cargo.toml
crates/webgal-derive-macro/: Cargo.toml
crates/webgal-derive-macro/src/: lib.rs
crates/webgal-derive/src/: lib.rs
docs/: ansy.xml  design.md  todo.md  usage.md
proc-macro/action/: Cargo.toml
proc-macro/action/src/: lib.rs
src/: lib.rs
src/models/: bestdoli.rs  bestdori.rs  internal.rs  live2d.rs  mod.rs  webgal.rs
src/pipeline/: definition.rs  downloader.rs  extractor.rs  mod.rs  pipeline.rs  purifier.rs  resolver.rs  transpiler.rs
