[workspace]
resolver = "2"
members = [
    "crates/bd2wg", 
    "crates/bd2wg-cli", 
    "crates/webgal-derive", 
    "crates/webgal-derive-macro", 
    "crates/template-parse", 
]

[workspace.package]
author = "fltLi"
version = "1.1.1"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
paste = "1.0"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.21"
regex = "1.12"
bytes = "1.11"
derive_builder = "0.20"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
serde_json = "1.0"
